Apply refaster patch
Addresses: https://gitlab.com/sosy-lab/software/cpachecker/-/jobs/15379220179